MDEV-22707 : galera got stuck after flush tables

Remove unnecessary condition and add necessary include
for non debug Galera library.